homecluster/joplin/0_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: joplin
  labels:
    app.kubernetes.io/name: joplin
    app.kubernetes.io/component: namespace
