homecluster/joplin/4_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joplin-app
  namespace: joplin
  labels:
    app.kubernetes.io/name: joplin
    app.kubernetes.io/component: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: joplin-app
  template:
    metadata:
      labels:
        app: joplin-app
    spec:
      containers:
        - name: joplin-server
          image: etechonomy/joplin-server:latest
          ports:
            - containerPort: 22300
