homecluster/joplin/5_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: joplin
  name: joplin-ingress
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: joplin-ingress
spec:
  tls:
  - hosts:
    -  joplin.mgsds.com
    secretName: joplin-ingress-tls
  rules:
  - host: joplin.mgsds.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: joplin
            port:
              number: 22300
