homecluster/joplin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: joplin
  name: joplin-ingress
  annotations:
    labels:
      app.kubernetes.io/component: ingress
      app.kubernetes.io/name: joplin-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - joplin.mgsds.com
    secretName: joplin.mgsds.com-tls
  rules:
  - host: joplin.mgsds.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: joplin-app
            port:
              number: 22300
